database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbmsdeployment
spec:
  strategy:
    type: Recreate
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: mydatabase
      labels:
        app: database
    spec:
      containers:
        - name: mydbms
          image: mysql
          ports:
            - containerPort: 3306
