deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
spec:
  strategy:
    type: RollingUpdate
  Replicas: 2
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata: 
      name: mypod
      labels: 
        app: frontend
    spec:
      containers:
        - name: mywebcontainer
          image: wordpress
          ports:
           - containerPort: 80
