pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mypod
spec:
  containers:
   - name: mywebcontainer
     image: ubuntu
     ports:
      - containerPort: 80
